Edit readme; Remove asyncable interface; Modify success and error flows handling;

--- a/src/classes/AsyncProcessor.cls
+++ b/src/classes/AsyncProcessor.cls
@@ -1,23 +1,22 @@
 /**
  * @author Borsh Vlad  vlad.borsh@synebo.io
- * Handles chaining async jobs and runs flow. Also, it holds onError functionality 
- * if queue item does not provide error handling. Error invoking when exception occurred can be disabled,
+ * Handles chaining async jobs and runs flow. Error invoking when exception occurred can be disabled,
  * and flow can be completed in spite of errors
  */
 public with sharing class AsyncProcessor {
 
-  List<Asyncable> queue;
-  Asyncable onErrorAction;
+  List<AsyncUnit> queue;
+  AsyncUnit onErrorAction;
   Boolean ignore;
 
   public AsyncProcessor() {
-    this.queue = new List<Asyncable>();
+    this.queue = new List<AsyncUnit>();
     this.ignore = false;
   }
 
-  public AsyncProcessor add( Asyncable promise ) {
-    if ( promise != null ) {
-      this.queue.add( promise );
+  public AsyncProcessor add( AsyncUnit unit ) {
+    if ( unit != null ) {
+      this.queue.add( unit );
     }
     return this;
   }
@@ -27,39 +26,37 @@ public with sharing class AsyncProcessor {
     return this;
   }
 
-  public AsyncProcessor onError( Asyncable promise ) {
-    if ( promise != null ) {
-      this.onErrorAction = promise;
+  public AsyncProcessor onError( AsyncUnit unit ) {
+    if ( unit != null ) {
+      this.onErrorAction = unit;
     }
     return this;
   }
 
-  public AsyncProcessor ignoreExceptions() {
-    this.ignore = true;
-    return this;
-  }
-
-  public Boolean isExceptionIgnored() {
-    return this.ignore;
-  }
-
-  public Asyncable get( Integer index ) {
+  public AsyncUnit get( Integer index ) {
     return this.queue.get( index );
   }
 
-  public Asyncable gerError() {
+  public AsyncUnit gerError() {
     return this.onErrorAction;
   }
 
-  public Asyncable getFirstJob() {
+  public AsyncUnit getFirstJob() {
     if ( this.queue != null && !this.queue.isEmpty() ) {
       return this.queue.remove(0);
     }
     return null;
   }
 
+  public Boolean isNotEmpty() {
+    return this.queue != null && !this.queue.isEmpty();
+  }
+
   public Id execute() {
-    return System.enqueueJob( new AsyncUnit( this ) );
+    return System.enqueueJob( 
+      this.getFirstJob()
+        .setProcessor( this )
+    );
   }
 
 }
